basic/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations: 
    #cert-manager.io/cluster-issuer: "letsencrypt-stag"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingressClassName: "nginx"
spec:
  ingressClassName: "nginx"
  tls: 
    - hosts: 
      - nginx-demo.taingan.store
     # - reactjs-k8s.taingan.store
      secretName: nginx-k8s-tls 
  rules:
  - host: nginx-demo.taingan.store
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-svc 
            port: 
              number: 80
